--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "engine-phtml",
   "version": "1.0.0",
   "description": "",
+  "repository": "https://github.com/aleksip/engine-phtml",
   "main": "lib/engine_phtml.js",
   "directories": {
     "lib": "lib"
