--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "engine-phtml",
   "version": "1.1.0",
-  "description": "",
+  "description": "PHP template PatternEngine for Pattern Lab Node",
   "repository": "https://github.com/aleksip/engine-phtml",
   "main": "lib/engine_phtml.js",
   "directories": {
